fix: fix semicolon and whitespace in main info

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -27,11 +27,11 @@
         
 
         <p class="main__info">
-          <h3><b>Full Name:</b>Ibukunola Oreoluwa Mabawonku</h3>
+          <h3><b>Full Name:</b> Ibukunola Oreoluwa Mabawonku</h3>
           <h3><b>Age:</b> 25</h3>
           <h3><b>Sex:</b> Male</h3>
           <h3><b>State of Origin:</b> Ogun</h3>
-          <h3><b>Course of Study</b> Backend Engineering</h3>
+          <h3><b>Course of Study:</b> Backend Engineering</h3>
           <h3><b>ALT School ID:</b> ALT/SOE/025/0272</h3>
         </p>
 
