refractor: refine social media links

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -54,7 +54,7 @@
                 Over the years, I have cultivated a strong foundation in programming, problem-solving, and team collaboration, all of which have prepared me for the challenges of engineering. I enjoy continuously learning and growing as a developer, and I’m excited to be part of a community that strives to innovate and build solutions that make a difference.
             </p>
             <p>
-                In addition to my work as an engineer, I also have a creative side – I love making EDM music in my spare time. Music allows me to express myself in a different way, and it’s a great outlet for my creativity. You can check out my recently released track <a href="https://youtu.be/xyf3RG-vJXc?si=Ux02LIwiO7GQM9fq">here</a>.
+                In addition to my work as an engineer, I also have a creative side – I love making EDM music in my spare time. Music allows me to express myself in a different way, and it’s a great outlet for my creativity. You can check out my <b>Tiktok</b> page <a href="https://www.tiktok.com/@mareola_official">here</a>, and my recently released track <a href="https://youtu.be/xyf3RG-vJXc?si=Ux02LIwiO7GQM9fq"><b>on Youtube</b></a>, and my 
             </p>
         </section>
 
