feat: finish assignment two

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     
         <center><a href="./assignment1/index.html">Assignment 01</a></center> <br>
-        <center><a href="">Assignment 02</a></center> <br>
+        <center><a href="./assignment2/index.html">Assignment 02</a></center> <br>
 
         
         <script src="" async defer></script>
